# derive-termination

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  termination.rs
tests/: example.rs  termination.rs
tests/ui/: missing_attribute.rs  missing_attribute.stderr  missing_attribute_exit_code_table.rs  missing_attribute_exit_code_table.stderr  non_integer_literal.rs  non_integer_literal.stderr  not_an_enum.rs  not_an_enum.stderr  out_of_range.rs  out_of_range.stderr
