[package]
name = "derive-termination"
version = "1.0.4"
edition = "2024"
description = "Derive the std::process::Termination trait for an enum (annotate the variants with `#[exit_code(n)`)."
license-file = "LICENSE"
repository = "https://github.com/barafael/derive-termination"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
