[package]
name = "derive-termination"
version = "2.0.0"
edition = "2024"
description = "Derive the std::process::Termination trait for an enum (annotate the variants with `#[exit_code(n)`)."
license-file = "LICENSE"
repository = "https://github.com/barafael/derive-termination"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
trybuild = "1"
